# agent-playground

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
examples/: generate-schema-site.rs
scripts/: install.sh
src/: config.rs  info.rs  lib.rs  listing.rs  main.rs  runner.rs  schema.rs
src/utils/: mod.rs  symlink.rs
templates/.claude/: settings.json
templates/.codex/: config.toml
templates/config/: playground_config.toml  root_config.toml
xtask/: Cargo.toml
xtask/src/: main.rs
