[package]
name = "agent-playground"
version = "0.0.1"
edition = "2024"
description = "CLI for running agent in a temporary playground."
readme = "README.md"
license = "MIT"
repository = "https://github.com/observerw/agent-playground"
keywords = ["agent", "cli", "playground"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "apg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = "4.6.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
include_dir = "0.7.4"
schemars = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
toml = "0.9.8"

[dev-dependencies]
serde_json = "1.0.145"
