[package]
name = "agent-playground"
version = "0.0.6"
edition = "2024"
description = "CLI for running agent in a temporary playground."
readme = "README.md"
license = "MIT"
repository = "https://github.com/observerw/agent-playground"
keywords = ["agent", "cli", "playground"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = ["xtask"]

[[bin]]
name = "apg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = { version = "4.6.0", features = ["unstable-dynamic"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
include_dir = "0.7.4"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
toml = "1.1.0"
